--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,4 +1,5 @@
 .slider__section {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,6 +8,9 @@
 }
 
 .slider__section_collage {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -72,11 +76,11 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 2.55;
-  color: 'black';
-  text-decoration-color: #e1e1e1;
+  color: getColor('black');
+  text-decoration-color: getColor('text-decoration-color');
   text-decoration-line: underline;
   text-underline-offset: 0.7em;
-  background: #fafafa;
+  background: getColor('slider-text-background');
   padding: 43px 50px 20px 50px;
 
   @include size(tablet) {
@@ -96,7 +100,7 @@
   font-size: 140px;
   top: -110px;
   left: 40px;
-  color: rgba(126, 122, 122, 0.144);
+  color: getColor('quotation-marks-color');
 
   @include size(desktop) {
     left: 30px;
@@ -105,7 +109,7 @@
 
 .slider__content_reddot {
   border-radius: 4px;
-  background-color: #c7133e;
+  background-color: getColor('slider-reddots-color');
 }
 
 .slider__content_title {
@@ -150,7 +154,7 @@
   margin-left: 9px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #d9d9d9;
+  background-color: getColor('slider-indicators-color');
   background-clip: padding-box;
   border-radius: 100px;
   opacity: 0.5;
