--- a/src/sass/components/_slider.scss
+++ b/src/sass/components/_slider.scss
@@ -1,5 +1,5 @@
 .slider__section {
-  position: relative;
+  /* position: relative; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,7 +8,7 @@
 }
 
 .slider__section_collage {
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   width: 100%;
