добавила свг в папку свг, но она не работает и отредактировала разметку

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -22,15 +22,15 @@
                 <h3 class="cards-box-title">ice cream</h3>
                 <a href="#" class="cards-link">
                     <svg class="cards-svg">
-                        <use href="../src/images/svg/group-3.svg">
-                        </use>
+                        <!-- <use href="./images/svg/group-3.svg">
+                        </use> -->
                     </svg>
                 </a>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <a href="#" class="icon-link">
-                    <svg class="cards-icon" width="40" height="40">
-                        <use href="./images/svg/arrow-right2.svg">
+                    <svg class="cards-icon">
+                        <use href="./images/svg/sprite.svg#arrow-products">
                         </use>
                     </svg>
                 </a>
@@ -51,15 +51,15 @@
                 <h3 class="cards-box-title">ice coffee</h3>
                 <a href="#" class="cards-link">
                     <svg class="cards-svg">
-                        <use href="../src/images/svg/group-3.svg">
+                        <use href="">
                         </use>
                     </svg>
                 </a>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <a href="#" class="icon-link">
-                    <svg class="cards-icon" width="40" height="40">
-                        <use href="">
+                    <svg class="cards-icon">
+                        <use href="./images/svg/sprite.svg#arrow-products">
                         </use>
                     </svg>
                 </a>
@@ -80,15 +80,15 @@
                 <h3 class="cards-box-title">milkshakes</h3>
                 <a href="#" class="cards-link">
                     <svg class="cards-svg">
-                        <use href="../src/images/svg/group-3.svg">
+                        <use href="">
                         </use>
                     </svg>
                 </a>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <a href="#" class="icon-link">
-                    <svg class="cards-icon" width="40" height="40">
-                        <use href="">
+                    <svg class="cards-icon">
+                        <use href="./images/svg/sprite.svg#arrow-products">
                         </use>
                     </svg>
                 </a>
