добавляет все стили кроме 2х

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,11 @@
         <div class="hero-made-box">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             </p>
-            <a class="hero-svg" href="">button svg</a>
+            <a class="hero-svg-arrow-link" href="">
+                <svg class="svg-arrow">
+                    <use href="./images/svg/sprite.svg#arrow-products"></use>
+                </svg>
+            </a>
         </div>
         <div class="hero-info">
             <ul>
