--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import 'components/address';
 @import 'utils/colors';
 @import 'utils/size';
+@import 'utils/retina-media';
 @import 'base/button';
 @import 'components/container';
 @import 'components/body';
