Правки после code review
Добавил в main в 16 строку @import 'utils/transition';.  В утилитный класс .button добавил @include transition(color background-color);.  В политру добавил 2 цвета. Добавил на все интерактивные элементы @include transition()

--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -9,6 +9,7 @@
   font-size: 16px;
   line-height: 1.31;
   color: getColor('accent-color');
+  @include transition(color background-color);
 
   padding-left: 37px;
   padding-right: 37px;
