--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -36,13 +36,13 @@
   @media screen and (max-width: 1199px) {
     z-index: 666;
     transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @include transition(transform);
     position: fixed;
     top: 0px;
     right: 0px;
     width: 250px;
     height: 500px;
-    background-color: #e17992;
+    background-color: getColor('menu-bg-cl');
     text-align: center;
     padding: 60px 0px;
     filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
@@ -82,6 +82,7 @@
 
 .header-close-icon {
   fill: getColor('white');
+  @include transition(fill);
 }
 
 .header-order-btn_menu {
@@ -103,7 +104,7 @@
   .item {
     padding: 10px 20px;
     text-align: start;
-    border: 1px solid #e18298;
+    border: 1px solid getColor(menu-border-cl);
     background-color: inherit;
     @include size(desktop) {
       padding: 0px;
@@ -124,6 +125,7 @@
   line-height: 1.286;
   text-decoration: none;
   color: getColor('white');
+  @include transition(color);
   &:hover,
   &:focus {
     color: getColor('accent-color');
@@ -170,6 +172,7 @@
   width: 20px;
   height: 20px;
   fill: getColor('accent-color');
+  @include transition(fill);
 }
 
 .header-order-btn {
@@ -190,4 +193,5 @@
 .header-order-icon {
   fill: getColor('accent-color');
   margin-left: 10px;
+  @include transition(fill);
 }
