--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -9,6 +9,8 @@ $colors: (
   'dark-background-color': #ffb8ca,
   'light-background-color': #fff5f6,
   'green': #c2e297,
+  'menu-bg-cl': #e17992,
+  'menu-border-cl': #e18298,
 );
 
 @function getColor($key) {
