--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -1,40 +1,43 @@
 <section class="container">
-  <hgroup>
-    <h2 class="him-section-title">tradition and love </h2>
-    <h3 class="him-title">how it’s made?</h3>
+  <hgroup class="him-section-title">
+    <h3>tradition and love </h3>
+    <h2>how it’s made?</h2>
   </hgroup>
-  <div class="flex-container">
-    <picture>
-      <source
-        srcset="./images/him/desktop/how-its-made-cow.png 1x, ./images/him/desktop/how-its-made-cow@x2.png 2x"
-        media="(min-width: 1200px)" />
-      <source
-        srcset="./images/him/tablet/how-its-made-cow.png 1x 1x, ./images/him/tablet/how-its-made-cow@x2.png 2x"
-        media="(min-width: 768px)" />
-      <source
-        srcset="./images/him/mobile/how-its-made-cow.png 1x, ./images/him/mobile/how-its-made-cow@x2.png 2x"
-        media="(max-width: 767px)" />
-      <img src="./images/him/mobile/cow.png" alt="Cow HIM">
+  <div class="him-flex-container">
+    <picture class="him-picture">
+      <source srcset="./images/him/desktop/how-its-made-cow.png 1x, ./images/him/desktop/how-its-made-cow.png 2x"
+              media="(min-width:1200px)" />
+      <source srcset="./images/him/tablet/how-its-made-cow.png 1x, ./images/him/tablet/how-its-made-cow.png 2x"
+              media="(min-width:768px)" />
+      <source srcset="./images/him/mobile/how-its-made-cow.png 1x, ./images/him/tablet/how-its-made-cow.png 2x"
+              media="(min-width:480px)" />
+      <img class="image" src="./images/him/desktop/how-its-made-cow.png" alt="cow" width="516" />
     </picture>
-  </div>
-  <div class="him-div-bg">
-    <p class="text-him text-gray">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
-      faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-    <p class="text-him text-gray">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus
-      orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
-      nibh, tincidunt.</p>
-    <p class="text-him text-gray">Aliquam erat volutpat. Aenean accumsan.</p>
-    <button class="btn-him">Read more</button>
+
+
+    <div class="him-div-bg">
+      <p> Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
+        faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+      <p class="him-text-padding"> Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris
+        rhoncus
+        orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
+        nibh, tincidunt.</p>
+      <p>Aliquam erat volutpat. Aenean accumsan.</p>
+      <button class="button"> Read more</button>
+    </div>
   </div>
   <ul class="container list flex">
-    <li class="him-list"><img src="./images/him/cow-milk.svg" alt="" />
+    <li class="him-list">
+      <!--      <img src="../images/cow-milk.svg" alt="" />-->
       <p class="bullet-him">721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
     </li>
-    <li class="him-list"><img src="./images/him/apple-basket.svg" alt="">
+    <li class="him-list">
+      <!--      <img src="../images/apple-basket.svg" alt="">-->
       <p class="bullet-him">16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
     </li>
-    <li class="him-list"><img src="./images/him/heart-candy.svg" alt="">
-      <p class="bullet-him">84</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+    <li class="him-list">
+      <!--      <img src="../images/heart-candy.svg" alt="">-->
+      <p class="bullet-him">84</p>Aliquam ac dui vel dui vnpmulputate consectetur. Mauris massa.
     </li>
   </ul>
 </section>
