--- a/src/sass/components/_him.scss
+++ b/src/sass/components/_him.scss
@@ -1,71 +1,68 @@
 .him {
-  background-color: #fff5f6;
+  background-color: getColor('white');
   display: block;
 
-  @media screen and(min-width:768px) {
+  @media screen and(min-width: 768px) {
     // display: flex;
   }
 }
 
 .him-section-title {
   font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.166px;
+  line-height: 1.16;
   text-align: center;
-  letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #ffa5ba;
-  margin-bottom: 15px;
+  padding-top: 125px;
+  padding-bottom: 26px;
 
-  @media screen and(min-width:768px) {
-    font-size: 26px;
+  @include size(tablet-only) {
+    padding-top: 130px;
+    padding-bottom: 50px;
   }
 
-  @media screen and(min-width:1200px) {
-    font-size: 30px;
+  @include size(desktop) {
+    padding-bottom: 55px;
+  }
+
+  h2 {
+    font-size: 34px;
+    line-height: 1.15;
+    color: getColor('accent-color');
+    margin-bottom: 26px;
+
+    @include size(tablet) {
+      font-size: 48px;
+    }
+
+    @include size(desktop) {
+      font-size: 58px;
+      letter-spacing: 0.06em;
+    }
+  }
+
+  h3 {
+    font-size: 18px;
+    color: getColor('intensive-pink');
+    margin-bottom: 15px;
+
+    @include size(tablet) {
+      font-size: 26px;
+    }
+    @include size(desktop) {
+      font-size: 30px;
+    }
   }
 }
 
-.him-title {
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 34px;
-  line-height: 1.147;
-  text-align: center;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #d41443;
-  margin-bottom: 26px;
 
-  @media screen and(min-width:768px) {
-    font-size: 26px;
-    margin-bottom: 50px;
-  }
-
-  @media screen and(min-width:1200px) {
-    font-size: 30px;
-    margin-bottom: 102px;
-  }
-}
-
-.him-list {
-  list-style: none;
-}
-
-.text-him {
-  font-family: DM Sans;
-  font-style: normal;
+/*.text-him {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.62;
-
   margin-top: 46px;
   margin-bottom: 25px;
 
-  @media screen and(min-width: 768px) {
+  @include size(tablet) {
     text-align: left;
     margin-bottom: 30px;
   }
@@ -73,7 +70,7 @@
   :nth-child(2n) {
     margin-top: 0px;
   }
-}
+}*/
 
 .sub-text-him {
   font-family: DM Sans;
@@ -90,9 +87,6 @@
   color: #000000;
 }
 
-.text-gray {
-  color: #907e82;
-}
 
 .bullet-him {
   font-family: Titan One;
@@ -109,25 +103,50 @@
 }
 
 .him-div {
+  text-align: left;
+  margin-bottom: 30px;
   padding-left: 30px;
   padding-right: 30px;
 }
 
 .him-div-bg {
-  padding-left: 30px;
-  padding-right: 30px;
-  margin-bottom: 39px;
+  box-sizing: content-box;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  color: getColor('gray-text');
+  margin-top: 46px;
+  margin-bottom: 25px;
 
-  @media screen and(min-width:768px) {
+
+  :first-child {
+    color: getColor('black')
+  }
+
+  @include size(tablet) {
+    width: 340px;
     padding-left: 17px;
-    padding-right: 0;
+    padding-right: 36px;
+    font-size: 14px;
+  }
+  @include size(desktop) {
+    min-width: 463px;
+    font-size: 16px;
+    padding-left: 74px;
+    padding-right: 117px;
+
   }
 }
 
+.him-text-padding {
+  padding-top: 35px;
+  padding-bottom: 15px;
+}
+
 .him-bg {
-  // mobile-first
-  display: block;
-  background-image: url(../images/him/mobile/bg-him.png);
+  //background-image: url(./images/him/desktop/how-its-made-milk.png);
   background-repeat: no-repeat;
   background-size: contain;
 
@@ -136,29 +155,29 @@
   screen and (-o-min-device-pixel-ratio: 2/1),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-    background-image: url(../images/him/mobile/how-its-made-milk2@x.png);
+    //background-image: url(./images/him/desktop/how-its-made-milk.png);
   }
 
-  @media screen and(min-width:481px) {
-    width: 100%;
+  @media screen and(min-width: 481px) {
+
   }
 
   // tablet
-  @media screen and(min-width:768px) {
+  @media screen and(min-width: 768px) {
     padding-left: 17px;
   }
 
   // desktop
-  @media screen and(min-width:1200px) {
+  @media screen and(min-width: 1200px) {
     background-position-x: center;
-    background-image: url(../images/him/desktop/how-its-made-milkg.png);
+    //background-image: url(../images/him/desktop/how-its-made-milk.png);
 
     @media screen and (min-device-pixel-ratio: 2),
     screen and (-webkit-min-device-pixel-ratio: 2),
     screen and (-o-min-device-pixel-ratio: 2/1),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-      background-image: url(../images/him/desktop/how-its-made-milkg2@x.png);
+      //background-image: url(../images/him/desktop/how-its-made-milk@x2.png);
     }
   }
 }
@@ -182,7 +201,7 @@
   color: #d41443;
   border-color: transparent;
 
-  @media screen and(min-width:768px) {
+  @media screen and(min-width: 768px) {
     margin-top: 32px;
   }
 }
@@ -195,18 +214,46 @@
   transform: translateY(-50%);
 }
 
-.flex-container {
-  display: block;
+.him-flex-container {
+  flex-grow: 1;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 39px;
 
-  @media screen and(min-width:768px) {
+  @include size(tablet) {
+    padding-left: 17px;
+    padding-right: 36px;
+    padding-bottom: 66px;
     display: flex;
   }
+
+  @include size(desktop) {
+    padding-left: 17px;
+    padding-right: 36px;
+    padding-bottom: 66px;
+  }
+}
+
+.him-picture {
+  @include size(mobile) {
+    width: 280px;
+  }
+
+
+  @include size(tablet) {
+    width: 340px;
+  }
+
+  @include size(desktop) {
+    width: 516px;
+  }
+
 }
 
 .flex {
   display: block;
 
-  @media screen and(min-width:768px) {
+  @media screen and(min-width: 768px) {
     display: flex;
     justify-content: space-between;
   }
@@ -221,7 +268,7 @@
 .him-list:not(:last-child) {
   margin-bottom: 38px;
 
-  @media screen and(min-width:768px) {
+  @media screen and(min-width: 768px) {
     margin-right: 60px;
   }
 }
