--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -23,10 +23,10 @@
         orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
         nibh, tincidunt.</p>
       <p>Aliquam erat volutpat. Aenean accumsan.</p>
-      <button class="button"> Read more</button>
+      <button class="button btn-him"> Read more</button>
     </div>
   </div>
-  <ul class="container list flex">
+  <ul class="him-flex-container">
     <li class="him-list">
       <!--      <img src="../images/cow-milk.svg" alt="" />-->
       <p class="bullet-him">721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
