--- a/src/sass/components/_him.scss
+++ b/src/sass/components/_him.scss
@@ -54,31 +54,13 @@
   }
 }
 
-
-/*.text-him {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.62;
-  margin-top: 46px;
-  margin-bottom: 25px;
-
-  @include size(tablet) {
-    text-align: left;
-    margin-bottom: 30px;
-  }
-
-  :nth-child(2n) {
-    margin-top: 0px;
-  }
-}*/
-
 .sub-text-him {
   font-family: DM Sans;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
   line-height: 1.7;
-  /* or 20px */
+
 
   color: #000000;
 }
@@ -90,16 +72,19 @@
 
 .bullet-him {
   font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
   font-size: 36px;
   line-height: 1.138;
-  letter-spacing: 0.04em;
   text-transform: uppercase;
-
-  color: #d41443;
-
+  color: getColor('accent-color');
   margin-top: 16px;
+  margin-bottom: 16px;
+  @include size(tablet) {
+    margin-top: 36px;
+  }
+
+  @include size(tablet) {
+    margin-top: 40px;
+  }
 }
 
 .him-div {
@@ -190,18 +175,16 @@
   padding-right: 40px;
   padding-left: 40px;
 
-  font-family: DM Sans;
-  font-style: normal;
   font-weight: bold;
   font-size: 14px;
   line-height: 18px;
 
-  background: #ffffff;
+  background: getColor('white');
   border-radius: 22px;
-  color: #d41443;
+  color: getColor('accent-color');
   border-color: transparent;
 
-  @media screen and(min-width: 768px) {
+  @include size(tablet){
     margin-top: 32px;
   }
 }
