Добавляет: цвет, якоря, sans-serif

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,8 +4,8 @@
             <h1 class="hero-text">ice cream made with
                 <span class="hero-text-accent">passion</span>
             </h1>
-            <a class="hero-button" href="">Products</a>
-            <a class="hero-button hero-button-white" href="">How it’s made?</a>
+            <a class="hero-button" href="#products">Products</a>
+            <a class="hero-button hero-button-white" href="#maid">How it’s made?</a>
         </div>
 
         <div class="hero-made-box">
