--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -32,9 +32,9 @@
                     </a>
                 </li>
                 </ul>
-            <span>Feel free to contact <a class="footer-contakt" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </span>
+            <p>Feel free to contact <a class="footer-contact" href="tel:+61(0)383766284"> +61 (0) 383 766 284</a> </p>
             </li>
         </ul>
     </div>
     </footer>
-    <div class="copyright-container"><span class="copyright-text"> © 2019 - IceCream. All Rights Reserved.</span></div>
+    <div class="copyright-container"><span class="copyright-text"> &copy; 2019 - IceCream. All Rights Reserved.</span></div>
