добавила к шрифту sans serif

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -21,9 +21,16 @@
                 </picture>
                 <h3 class="cards-box-title">ice cream</h3>
                 <a href="#" class="cards-link">
+                    <!-- <div>
+                        <svg class="cards-svg">
+                        <use href="./images/svg/red-dot.svg"></use>
+                        <use href="./images/svg/red-dot.svg"></use>
+                        <use href="./images/svg/red-dot.svg"></use>
+                    </svg>
+                    </div> -->
                     <svg class="cards-svg">
-                        <!-- <use href="./images/svg/group-3.svg">
-                        </use> -->
+                        <use href="./images/svg/group-3.svg">
+                        </use>
                     </svg>
                 </a>
                 <p class="cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
