--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,3 +1,8 @@
+.products {
+  padding-top: 120px;
+  padding-bottom: 98px;
+}
+
 .products-title {
   margin-left: auto;
   margin-right: auto;
@@ -14,13 +19,8 @@
   }
 }
 
-.products {
-  padding-top: 120px;
-  padding-bottom: 98px;
-}
-
 .products-text-title {
-  font-family: Titan One;
+  font-family: Titan One sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -46,7 +46,7 @@
 
 .products-main-title {
   margin-bottom: 144px;
-  font-family: Titan One;
+  font-family: Titan One sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 34px;
@@ -154,7 +154,7 @@
 }
 
 .cards-box-title {
-  font-family: Titan One;
+  font-family: Titan One sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -217,7 +217,7 @@
 }
 
 .cards-svg {
-  width: 26px;
+  // width: 26px;
   height: 6px;
   fill: getColor('white');
 }
