Правка назания якоря

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,7 +5,7 @@
                 <span class="hero-text-accent">passion</span>
             </h1>
             <a class="hero-button" href="#products">Products</a>
-            <a class="hero-button hero-button-white" href="#maid">How it’s made?</a>
+            <a class="hero-button hero-button-white" href="#made">How it’s made?</a>
         </div>
 
         <div class="hero-made-box">
