--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -20,7 +20,7 @@
 }
 
 .products-text-title {
-  font-family: Titan One sans-serif;
+  font-family: Titan One;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -46,7 +46,7 @@
 
 .products-main-title {
   margin-bottom: 144px;
-  font-family: Titan One sans-serif;
+  font-family: Titan One;
   font-style: normal;
   font-weight: normal;
   font-size: 34px;
@@ -154,7 +154,7 @@
 }
 
 .cards-box-title {
-  font-family: Titan One sans-serif;
+  font-family: Titan One;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -206,7 +206,7 @@
 .cards-link {
   margin-top: 30px;
   margin-bottom: 30px;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
 
@@ -217,7 +217,7 @@
 }
 
 .cards-svg {
-  // width: 26px;
+  width: 26px;
   height: 6px;
   fill: getColor('white');
 }
