добавила sans serif

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -20,7 +20,7 @@
 }
 
 .products-text-title {
-  font-family: Titan One;
+  font-family: Titan One, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -46,7 +46,7 @@
 
 .products-main-title {
   margin-bottom: 144px;
-  font-family: Titan One;
+  font-family: Titan One, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 34px;
