--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -1,4 +1,5 @@
-<section class="container">
+<section class="him-background">
+  <section class="container">
   <hgroup class="him-section-title">
     <h3>tradition and love </h3>
     <h2>how it’s made?</h2>
@@ -22,22 +23,23 @@
         rhoncus
         orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
         nibh, tincidunt.</p>
-      <p>Aliquam erat volutpat. Aenean accumsan.</p>
+      <p class="line">Aliquam erat volutpat. Aenean accumsan.</p>
       <button class="button btn-him"> Read more</button>
     </div>
   </div>
-  <ul class="him-flex-container">
-    <li class="him-list">
+  <ul class="him-flex-container him-list">
+    <li class="him-item">
       <!--      <img src="../images/cow-milk.svg" alt="" />-->
       <p class="bullet-him">721</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
     </li>
-    <li class="him-list">
+    <li class="him-item">
       <!--      <img src="../images/apple-basket.svg" alt="">-->
       <p class="bullet-him">16kg</p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
     </li>
-    <li class="him-list">
+    <li class="him-item">
       <!--      <img src="../images/heart-candy.svg" alt="">-->
       <p class="bullet-him">84</p>Aliquam ac dui vel dui vnpmulputate consectetur. Mauris massa.
     </li>
   </ul>
+  </section>
 </section>
