--- a/src/partials/him.html
+++ b/src/partials/him.html
@@ -24,7 +24,7 @@
         orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa
         nibh, tincidunt.</p>
       <p class="line">Aliquam erat volutpat. Aenean accumsan.</p>
-      <button class="button btn-him"> Read more</button>
+      <button class="button btn-him" type="button"> Read more</button>
     </div>
   </div>
   <ul class="him-flex-container him-list">
