--- a/src/sass/base/_button.scss
+++ b/src/sass/base/_button.scss
@@ -3,9 +3,8 @@
   justify-content: center;
   align-items: center;
 
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: bold;
+  font-family: DM Sans, sans-serif;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.31;
   color: getColor('accent-color');
