--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -209,7 +209,7 @@
 .contacts-btn:nth-child(odd) {
   color: getColor('white');
   background-color: getColor('accent-color');
-  @include transition(color);
+  @include transition(color background-color);
 
   &:focus,
   &:hover,
